tests/type/errors/return_value_in_void.gbl
player p { dollars: 100$, chance: 50%, streak: 0x }

fn f() {
	return 1;
}

scene main
{
}
